[package]
name = "togglebits"
version = "0.1.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinybit = { path = "../tinybit" }
rand = "0.8.3"
netlib = { path = "../netlib" }
